--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -70,7 +70,7 @@ p {
   color: #fff;
 }
 
-.btn {
+.btnn {
   background: #333;
   border: medium none;
   border-radius: 0;
@@ -82,10 +82,6 @@ p {
   text-transform: uppercase;
 }
 
-.btn:hover,
-.btn:focus {
-  color: #fff;
-}
 
 .padDiv {
   padding: 30px 20px;
